--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Cayman theme
-description: Cayman is a clean, responsive theme for GitHub Pages.
-show_downloads: true
+title: Parcel Tracking
+description: Get tracking and notification of your parcels.
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
